tests/fixtures/invalid/bin_none.py
# Cannot call bin() with None
x = bin(None)
